<resources>
    <string name="app_name">FoodIt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_close">Close</string>
    <string name="action_open">Open</string>
    <string name="send">Enviar</string>
    <string name="create">Crear</string>
    <string name="menu">MENÚ</string>
    <string name="name">Nombre: </string>
    <string name="name_">nombre</string>
    <string name="sections">Secciones: </string>
    <string name="description">Descripción: </string>
    <string name="description_">descripción</string>
    <string name="section">SECCIÓN</string>
    <string name="dish">PLATO</string>
    <string name="price">Precio: </string>
    <string name="allergens">Alérgenos: </string>
    <string name="menu_">Menú: </string>
    <string name="category">Categoría: </string>
    <string name="add_allergens">Añadir alérgenos</string>
    <string name="select_menus">Elegir menu/s</string>
    <string name="load">Cargar</string>
    <string name="save">Guardar</string>
    <string name="addActual">Añadir existente</string>
    <string name="editMenu">Editar menu</string>
    <string name="edit_section">Editar seccion</string>
    <string name="delete">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="availableMenus">Menus disponibles</string>
    <string name="availableSections">Secciones disponibles</string>
    <string name="availableDishes">Platos disponibles</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="create_account">No account yet? Create One</string>
    <string name="availableBars">Bares disponibles</string>
    <string name="bar">Bar / Restaurante</string>
</resources>
